pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/pr13365-variation-3.rkt
#;
(exn-pred #rx"Expected a ...")
#lang typed/racket

(: f (All (a ...) (a ... a -> (Values a ... a))))
(define (f . x) (values 1))
